@@ -1,3 +1,9 @@
+2002-11-20  Adam Fedor  <fedor@gnu.org>
+
+	* Source/NSBundle.m (+preferredLocalizationsFromArray:forPreferences:): 
+	Check for array with no objects.
+	([NSBundle -localizedInfoDictionary]): Idem.
+
 2002-11-20  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/Additions/Unicode.m: Work around bug in the redhat 8 iconv
